# sporty_api_test

./: .gitignore  README.md  constants.py  enums.py  pyproject.toml
tests/: conftest.py  test_api.py
